# Youtobe-VidTranslateAI

./: .gitignore  LICENSE  PROJECT_LAYOUT.md  README.md  env.example  pyproject.toml  requirements-pro.txt  requirements.txt  run.py
content_hub/: .env.example  README.md  __init__.py  __main__.py  cli.py  config_loader.py  doctor.py  paths.py  requirements-publish.txt  runner.py
content_hub/catalog/: __init__.py  models.py  state_machine.py  store.py
content_hub/config/: filters.example.yaml  platforms.example.yaml  publish_rules.example.yaml  sources.yaml
content_hub/discovery/: __init__.py  feeds.py  filters.py
content_hub/docs/: ARCHITECTURE.md
content_hub/localize/: __init__.py  metadata.py
content_hub/prepare/: __init__.py  cover.py  packaging.py
content_hub/publish/: base.py  (+2 more)
examples/: README.md
pipeline/: README.md  config.yaml  env.example  requirements-lock-note.txt  run.py
scripts/: apply_video_playback_speed.py  asr_en_srt.py  burn_subtitles.py  dedupe_rolling_srt.py  download.py  dub_zh.py  elevenlabs_tts_client.py  en_sentence_merge_srt.py  finish_outputs.py  install_videolingo.ps1  merge_bilingual_srt.py  mux_dub_subs.py  rolling_caption_dedupe.py  translate_srt.py  translation_clients.py  volc_tts_client.py  vtt_to_srt.py  youtobe_layout.py
video_fetcher/: README.md  __init__.py  __main__.py  batch.py  cli.py  paths.py  pipeline_runner.py  relocate_outputs.py  workflow.py  youtobe_runner.py
youtobe pipeline/: README.md  env.example  pipeline_defaults.py  requirements-dub-background.txt  requirements-pro.txt  requirements.txt  run.py
(+56 files in other folders)
